@@ -5,6 +5,9 @@ ddetect (0.68) UNRELEASED; urgency=low
     - Remove empty and apparently unused prebaseconfig script from ethdetect.
   * Thiemo Seufer
     - Cleanup match pattern for sd_mod, sr_mod in hw-detect.sh.
+  * Sylvain Ferriol
+    - Add a case statement in ethdetect for special case modules like ne
+      and plip, and register separate questions for each.
   * Translations:
     - Kenshi Muto
       - Update Japanese translation (ja.po)
